import * as action from './action';
import { div, makeRoot, p, setFocus } from '../../test/util';

describe('FOCUS', () => {
  it('should focus an F_ELEM (SIB_HIGHLIGHT)', () => {
    // arrange
    const html = ['<p id="p1">p1</p>'].join('');
    const cx = makeRoot(html);
    const p1 = cx.document.getElementById('p1') as HTMLElement;
    const focus = jest.spyOn(p1, 'focus');

    // act
    action.FOCUS(cx, p1);

    // assert
    expect(focus).toBeCalledTimes(1);
  });

  it('should not focus a non-F_ELEM', () => {
    // arrange
    const html = ['<script id="p1">p1</script>'].join('');
    const cx = makeRoot(html);
    const p1 = cx.document.getElementById('p1') as HTMLElement;
    const focus = jest.spyOn(p1, 'focus');

    // act
    action.FOCUS(cx, p1);

    // assert
    expect(focus).toBeCalledTimes(0);
  });
});

describe('SIB_HIGHLIGHT', () => {
  it('should highlight current siblings of the active element', () => {
    // arrange
    const html = [
      '<p>p1</p>',
      '<p id="p2">p2</p>',
      '<p>p3</p>',
      '<p>p4</p>',
    ].join('');
    const cx = makeRoot(html);
    setFocus(cx, 'p2');

    // act
    action.SIB_HIGHLIGHT(cx);

    // assert
    expect(cx.root).toMatchSnapshot();
  });
});

describe('REC_NEXT', () => {
  it('should recurse down', () => {
    // arrange
    const cx = makeRoot(
      div({ id: 'div1' }, div({ id: 'div1-1' }, p({ id: 'p1' }, 'text-1'))),
    );
    setFocus(cx, 'div1');

    // act
    const ids: Array<string | undefined> = [];
    // const ids: Array<HTMLElement | null> = [];
    action.REC_NEXT(cx);
    ids.push(cx.active?.id);
    action.REC_NEXT(cx);
    ids.push(cx.active?.id);
    action.REC_NEXT(cx);
    ids.push(cx.active?.id);

    // assert
    expect(ids).toEqual(['div1', 'div1-1', 'p1']);
  });
});
